feat: validate metadata (#20)
* chore: add log context

* chore: fix lint

* chore: update imports

* feat: add validate sources API and logic

* feat: add validate sources API and logic

* chore: rename interface

* chore: fix cr comments

* chore: fix lint

* fix: fix tests

* fix: fix tests

* fix: fix tests

* fix: fix tests

* fix: fix tests

* chore: fix lint

* fix: fix tests

* chore: lint fix

* chore: lint fix

* test: add tests

* chore: tests fixed

* chore: tests fixed

* chore: tests fixed

* chore: fix lint warning

* fix: fix tests of validate API

* Update src/common/interfaces.ts


* Update src/validator/validationManager.ts


* Update tests/helpers/helpers.ts


* chore: fix cr comments

* fix: fix tests

* fix: update tests

* fix: fix tests

* fix: fix metadta = undefined in validation method

* chore: add validate interface

* chore: revert throw appError handling

* chore: add await

* chore: change errors to constants

* chore: fix cr comments

* chore: fix prettier

* chore: fix cr review

---------
