# src/model/models/modelManager.ts
@@ -1,3 +1,5 @@
+import { join } from 'node:path';
+import { readFile } from 'node:fs/promises';
 import { inject, injectable } from 'tsyringe';
 import { v4 as uuid } from 'uuid';
 import { Logger } from '@map-colonies/js-logger';
@@ -7,17 +9,21 @@ import { THREE_D_CONVENTIONS } from '@map-colonies/telemetry/conventions';
 import { StatusCodes } from 'http-status-codes';
 import { StoreTriggerCall } from '../../externalServices/storeTrigger/storeTriggerCall';
 import { StoreTriggerPayload, StoreTriggerResponse } from '../../externalServices/storeTrigger/interfaces';
-import { SERVICES } from '../../common/constants';
-import { ValidationManager } from '../../validator/validationManager';
+import { FILE_ENCODING, SERVICES } from '../../common/constants';
+import { FailedReason, ValidationManager } from '../../validator/validationManager';
 import { AppError } from '../../common/appError';
-import { IngestionPayload, LogContext } from '../../common/interfaces';
+import { IConfig, IngestionPayload, IngestionValidatePayload, LogContext, ValidationResponse } from '../../common/interfaces';
 import { convertStringToGeojson, changeBasePathToPVPath, replaceBackQuotesWithQuotes, removePvPathFromModelPath } from './utilities';
+
+export const ERROR_STORE_TRIGGER_ERROR: string = 'store-trigger service is not available';
 
 @injectable()
 export class ModelManager {
+  private readonly basePath: string;
   private readonly logContext: LogContext;
 
   public constructor(
+    @inject(SERVICES.CONFIG) private readonly config: IConfig,
     @inject(SERVICES.LOGGER) private readonly logger: Logger,
     @inject(SERVICES.TRACER) public readonly tracer: Tracer,
     @inject(ValidationManager) private readonly validator: ValidationManager,
@@ -27,61 +33,87 @@ export class ModelManager {
       fileName: __filename,
       class: ModelManager.name,
     };
+    this.basePath = this.config.get<string>('paths.basePath');
+  }
+
+  @withSpanAsyncV4
+  public async validateModel(payload: IngestionValidatePayload): Promise<ValidationResponse> {
+    const isValid = this.validator.isModelPathValid(payload.modelPath, this.basePath);
+    if (!isValid) {
+      return {
+        isValid: false,
+        message: `Unknown model path! The model isn't in the agreed folder!, modelPath: ${payload.modelPath}, basePath: ${this.basePath}`,
+      };
+    }
+
+    const adjustedModelPath = this.getAdjustedModelPath(payload.modelPath);
+    const isModelFileExists = await this.validator.isPathExist(adjustedModelPath);
+    if (!isModelFileExists) {
+      return {
+        isValid: false,
+        message: `Unknown model name! The model name isn't in the folder!, modelPath: ${adjustedModelPath}`,
+      };
+    }
+
+    const tilesetLocation = join(adjustedModelPath, payload.tilesetFilename);
+    const isTilesetExists = await this.validator.isPathExist(tilesetLocation);
+    if (!isTilesetExists) {
+      return {
+        isValid: false,
+        message: `Unknown tileset name! The tileset file wasn't found!, tileset: ${payload.tilesetFilename} doesn't exist`,
+      };
+    }
+
+    const fileContent: string = await readFile(tilesetLocation, { encoding: FILE_ENCODING });
+    const failedReason: FailedReason = { outFailedReason: '' };
+    const polygonResponse = this.validator.getTilesetModelPolygon(fileContent, failedReason);
+    if (polygonResponse == undefined) {
+      return {
+        isValid: false,
+        message: failedReason.outFailedReason,
+      };
+    }
+
+    const sourcesValidationResponse: ValidationResponse = this.validator.isPolygonValid(polygonResponse);
+    if (!sourcesValidationResponse.isValid) {
+      return sourcesValidationResponse;
+    }
+
+    if (payload.metadata == undefined) {
+      return {
+        isValid: true,
+      };
+    }
+    // else {
+    const isMetadataValidResponse = await this.validator.isMetadataValid(payload.metadata, polygonResponse);
+    return isMetadataValidResponse;
   }
 
   @withSpanAsyncV4
   public async createModel(payload: IngestionPayload): Promise<StoreTriggerResponse> {
     const logContext = { ...this.logContext, function: this.createModel.name };
-    const modelId = uuid();
+
     this.logger.info({
-      msg: 'started ingestion of new model',
+      msg: 'new model ingestion - start validation',
       logContext,
-      modelId,
       modelName: payload.metadata.productName,
       payload,
     });
-    const spanActive = trace.getActiveSpan();
 
-    spanActive?.setAttributes({
-      [THREE_D_CONVENTIONS.three_d.catalogManager.catalogId]: modelId,
-    });
+    // update values
+    const originalModelPath: string = payload.modelPath;
 
-    const productSource: string = payload.modelPath;
-    payload.metadata.footprint = convertStringToGeojson(JSON.stringify(payload.metadata.footprint));
-
-    this.logger.debug({
-      msg: 'starting validating the payload',
-      logContext,
-      modelId,
-      modelName: payload.metadata.productName,
-    });
     try {
-      const resultModelPathValidation = this.validator.validateModelPath(payload.modelPath);
-      if (typeof resultModelPathValidation === 'string') {
-        throw new AppError('', StatusCodes.BAD_REQUEST, resultModelPathValidation, true);
+      payload.metadata.footprint = convertStringToGeojson(JSON.stringify(payload.metadata.footprint));
+      const isValidResponse = await this.validateModel(payload);
+      if (!isValidResponse.isValid) {
+        throw new AppError('', StatusCodes.BAD_REQUEST, isValidResponse.message!, true);
       }
-      payload.modelPath = changeBasePathToPVPath(payload.modelPath);
-      payload.modelPath = replaceBackQuotesWithQuotes(payload.modelPath);
-      this.logger.debug({
-        msg: `changed model name from: '${productSource}' to: '${payload.modelPath}'`,
-        logContext,
-        modelName: payload.metadata.productName,
-      });
-
-      const validated: boolean | string = await this.validator.validateIngestion(payload);
-      if (typeof validated == 'string') {
-        throw new AppError('badRequest', StatusCodes.BAD_REQUEST, validated, true);
-      }
-      this.logger.info({
-        msg: 'model validated successfully',
-        logContext,
-        modelId,
-        modelName: payload.metadata.productName,
-      });
     } catch (error) {
       if (error instanceof AppError) {
         throw error;
       }
+      // else
       this.logger.error({
         msg: 'unfamiliar error',
         logContext,
@@ -90,11 +122,25 @@ export class ModelManager {
       throw new AppError('error', StatusCodes.INTERNAL_SERVER_ERROR, String(error), true);
     }
 
+    // else
+    const modelId = uuid();
+    this.logger.info({
+      msg: 'new model ingestion - start ingestion',
+      logContext,
+      modelId,
+      modelName: payload.metadata.productName,
+      payload,
+    });
+    const spanActive = trace.getActiveSpan();
+    spanActive?.setAttributes({
+      [THREE_D_CONVENTIONS.three_d.catalogManager.catalogId]: modelId,
+    });
+
     const request: StoreTriggerPayload = {
       modelId: modelId,
       pathToTileset: removePvPathFromModelPath(payload.modelPath),
       tilesetFilename: payload.tilesetFilename,
-      metadata: { ...payload.metadata, productSource: productSource },
+      metadata: { ...payload.metadata, productSource: originalModelPath },
     };
     try {
       const response: StoreTriggerResponse = await this.storeTrigger.postPayload(request);
@@ -108,7 +154,20 @@ export class ModelManager {
         error,
         payload,
       });
-      throw new AppError('', StatusCodes.INTERNAL_SERVER_ERROR, 'store-trigger service is not available', true);
+      throw new AppError('', StatusCodes.INTERNAL_SERVER_ERROR, ERROR_STORE_TRIGGER_ERROR, true);
     }
+  }
+
+  private getAdjustedModelPath(modelPath: string): string {
+    const logContext = { ...this.logContext, function: this.getAdjustedModelPath.name };
+    const changedModelPath = changeBasePathToPVPath(modelPath);
+    const replacedModelPath = replaceBackQuotesWithQuotes(changedModelPath);
+    this.logger.debug({
+      msg: `changed model name from: '${modelPath}' to: '${replacedModelPath}'`,
+      logContext,
+      productSource: modelPath,
+      replacedModelPath: replacedModelPath,
+    });
+    return replacedModelPath;
   }
 }
