# src/model/routes/modelRouter.ts
@@ -7,6 +7,7 @@ const modelRouterFactory: FactoryFunction<Router> = (dependencyContainer) => {
   const controller = dependencyContainer.resolve(ModelController);
 
   router.post('/', controller.createModel);
+  router.post('/validate', controller.validate.bind(controller));
 
   return router;
 };
